test/libsolidity/syntaxTests/iele/sig.sol
contract test {
	constructor() public {
		msg.sig;
	}
}
// ----
// TypeError: (42-49): msg.sig is not supported in IELE. For more information, including potential workarounds, see README-IELE-SUPPORT.md
